# sdlcards

./: CMakeLists.txt  README.md  app.cpp  app.hpp  cacheta.cpp  cacheta.hpp  card.cpp  card.hpp  exception.cpp  exception.hpp  imgui.ini  main.cpp  paciencia.cpp  paciencia.hpp  render.cpp  render.hpp  thread.cpp  thread.hpp
scripts/: script-gimp-resize.py
